--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -131,8 +131,8 @@
   <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">Din enhed understøtter ikke initieret opkald.</string>
   <string name="ConversationActivity_leave_group">Forlad gruppe?</string>
   <string name="ConversationActivity_are_you_sure_you_want_to_leave_this_group">Er du sikker, du vil forlade gruppen?</string>
-  <string name="ConversationActivity_transport_insecure_sms">Usikker (ikke krypteret) SMS</string>
-  <string name="ConversationActivity_transport_insecure_mms">Usikker (ikke krypteret) MMS</string>
+  <string name="ConversationActivity_transport_insecure_sms">Usikret (ikke krypteret) SMS</string>
+  <string name="ConversationActivity_transport_insecure_mms">Usikret (ikke krypteret) MMS</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Skal vi ikke bruge Signal %1$s?</string>
   <string name="ConversationActivity_lets_use_this_to_chat">Skal vi ikke bruge Signal %1$s?</string>
@@ -500,7 +500,7 @@ indtastede (%s) er ugyldigt
   <string name="RegistrationActivity_i_understand">Jeg forstår</string>
   <string name="RegistrationActivity_play_services_error">Play Services fejl</string>
   <string name="RegistrationActivity_google_play_services_is_updating_or_unavailable">Google Play Services bliver opdateret eller er midlertidigt utilgængelig. Prøv igen</string>
-  <string name="RegistrationActivity_terms_and_privacy">Betingelser og privatlivspolitik</string>
+  <string name="RegistrationActivity_terms_and_privacy">Vilkår og privatlivspolitik</string>
   <string name="RegistrationActivity_no_browser">Kan ikke åbne linket. Ingen webbrowser installeret</string>
   <string name="RegistrationActivity_more_information">Mere information</string>
   <string name="RegistrationActivity_less_information">Mindre information</string>
@@ -593,7 +593,7 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <string name="MmsMessageRecord_bad_encrypted_mms_message">Ugyldig krypteret MMS besked</string>
   <string name="MmsMessageRecord_mms_message_encrypted_for_non_existing_session">MMS besked krypteret til en session der ikke findes</string>
   <!--MuteDialog-->
-  <string name="MuteDialog_mute_notifications">Dæmp notifikationer</string>
+  <string name="MuteDialog_mute_notifications">Mute notifikationer</string>
   <!--OutdatedBuildReminder-->
   <string name="OutdatedBuildReminder_no_web_browser_installed">Ingen webbrowser installeret!</string>
   <!--ApplicationMigrationService-->
@@ -861,18 +861,18 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <string name="prompt_mms_activity__signal_requires_mms_settings_to_deliver_media_and_group_messages">Signal kræver adgang til MMS-indstillinger for at levere media og gruppebeskeder gennem din teleudbyder. Din enhed gør ikke denne information tilgængelig, hvilket nogle gange er tilfældet for låste enheder og andre begrænsende opsætninger</string>
   <string name="prompt_mms_activity__to_send_media_and_group_messages_tap_ok">Klik \"OK\" for at sende multimedie- og gruppebeskeder og udfyld indstillingerne. MMS-indstillingerne for din teleoperatør kan ofte findes ved at søge på \"din operatørs APN\". Du behøver kun gøre dette en gang</string>
   <!--profile_create_activity-->
-  <string name="profile_create_activity__set_later">Udskyd</string>
+  <string name="profile_create_activity__set_later">Senere</string>
   <string name="profile_create_activity__finish">AFSLUT</string>
   <string name="profile_create_activity__who_can_see_this_information">Hvem kan se denne information?</string>
   <string name="profile_create_activity__your_name">Dit navn</string>
   <!--recipient_preferences_activity-->
   <string name="recipient_preference_activity__shared_media">Delt medie</string>
   <!--recipient_preferences-->
-  <string name="recipient_preferences__mute_conversation">Dæmp samtale</string>
+  <string name="recipient_preferences__mute_conversation">Mute samtale</string>
   <string name="recipient_preferences__custom_notifications">Brugerdefinerede notifikationer</string>
   <string name="recipient_preferences__custom_notifications_settings">Systemindstillinger for notifikatoner</string>
   <string name="recipient_preferences__notification_sound">Notifikationslyd</string>
-  <string name="recipient_preferences__vibrate">Vibrér</string>
+  <string name="recipient_preferences__vibrate">Vibration</string>
   <string name="recipient_preferences__block">Blokér</string>
   <string name="recipient_preferences__color">Farve</string>
   <string name="recipient_preferences__view_safety_number">Vis sikkerhedsnummer</string>
@@ -932,11 +932,11 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <string name="arrays__import_export">Importér</string>
   <string name="arrays__use_default">Anvend standard</string>
   <string name="arrays__use_custom">Anvend tilpasset</string>
-  <string name="arrays__mute_for_one_hour">Dæmp 1 time</string>
-  <string name="arrays__mute_for_two_hours">Dæmp 2 timer</string>
-  <string name="arrays__mute_for_one_day">Dæmp 1 dag</string>
-  <string name="arrays__mute_for_seven_days">Dæmp 7 dage</string>
-  <string name="arrays__mute_for_one_year">Dæmp 1 år</string>
+  <string name="arrays__mute_for_one_hour">Mute 1 time</string>
+  <string name="arrays__mute_for_two_hours">Mute 2 timer</string>
+  <string name="arrays__mute_for_one_day">Mute 1 dag</string>
+  <string name="arrays__mute_for_seven_days">Mute 7 dage</string>
+  <string name="arrays__mute_for_one_year">Mute 1 år</string>
   <string name="arrays__settings_default">Standardindstillinger</string>
   <string name="arrays__enabled">Aktiveret</string>
   <string name="arrays__disabled">Deaktiverét</string>
@@ -992,7 +992,7 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <string name="preferences__three_times">Tre gange</string>
   <string name="preferences__five_times">Fire gange</string>
   <string name="preferences__ten_times">Ti gange</string>
-  <string name="preferences__vibrate">Vibrér</string>
+  <string name="preferences__vibrate">Vibration</string>
   <string name="preferences__green">Grøn</string>
   <string name="preferences__red">Rød</string>
   <string name="preferences__blue">Blå</string>
@@ -1022,8 +1022,8 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <string name="preferences__trim_all_conversations_now">Trim alle samtaler nu</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Løb gennem alle samtaler og gennemfør begrænsninger for samtalelængde</string>
   <string name="preferences__linked_devices">Enheder</string>
-  <string name="preferences__light_theme">Lys</string>
-  <string name="preferences__dark_theme">Mørk</string>
+  <string name="preferences__light_theme">Lyst</string>
+  <string name="preferences__dark_theme">Mørkt</string>
   <string name="preferences__appearance">Udseende</string>
   <string name="preferences__theme">Tema</string>
   <string name="preferences__default">Standard</string>
@@ -1110,9 +1110,9 @@ Modtog en nøgle-besked for en ugyldig protokol-version.
   <!--conversation_secure_verified-->
   <string name="conversation_secure_verified__menu_reset_secure_session">Gendan sikker forbindelse</string>
   <!--conversation_muted-->
-  <string name="conversation_muted__unmute">Ophæv dæmpning</string>
+  <string name="conversation_muted__unmute">Fjern mute</string>
   <!--conversation_unmuted-->
-  <string name="conversation_unmuted__mute_notifications">Dæmp notifikationer</string>
+  <string name="conversation_unmuted__mute_notifications">Mute notifikationer</string>
   <!--conversation-->
   <string name="conversation__menu_add_attachment">Vedhæft fil</string>
   <string name="conversation__menu_edit_group">Rediger gruppe</string>
