--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -360,6 +360,9 @@
   <string name="MediaPickerActivity_send_to">%sに送信</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">タップで選択</string>
+  <plurals name="MediaPickerItemFragment_cant_share_more_than_n_items">
+    <item quantity="other">%d 個を超えるアイテムは共有できません</item>
+  </plurals>
   <!--MediaSendActivity-->
   <string name="MediaSendActivity_add_a_caption">キャプション追加...</string>
   <!--MediaRepository-->
