--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -160,6 +160,7 @@
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Чтобы сделать фото или видео требуется разрешение на доступ к камере, но оно было вами отклонено. Чтобы предоставить разрешение вручную, перейдите Настройки, выберите Приложения, найдите Signal, затем выберите Разрешения и включите Камеру.</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Для съемки фото или видео предоставьте Signal доступ к камере</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
+  <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">Signal не может отправлять SMS/MMS-сообщения, так как не является приложением SMS по умолчанию. Хотите изменить это в настройках Android?</string>
   <string name="ConversationActivity_yes">Да</string>
   <string name="ConversationActivity_no">Нет</string>
   <!--ConversationAdapter-->
@@ -410,8 +411,17 @@
   <string name="NotificationMmsMessageRecord_downloading_mms_message">Скачиваем MMS-сообщение</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Ошибка при скачивании MMS-сообщения; нажмите, чтобы повторить</string>
   <!--MediaPickerActivity-->
+  <string name="MediaPickerActivity_send_to">Отправить %s</string>
   <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">Нажмите для выбора</string>
+  <plurals name="MediaPickerItemFragment_cant_share_more_than_n_items">
+    <item quantity="one">Вы не можете поделиться больше, чем %d элементом.</item>
+    <item quantity="few">Вы не можете поделиться больше, чем %dэлементами.</item>
+    <item quantity="many">Вы не можете поделиться больше, чем %d элементами.</item>
+    <item quantity="other">Вы не можете поделиться больше, чем %dэлементами.</item>
+  </plurals>
   <!--MediaSendActivity-->
+  <string name="MediaSendActivity_add_a_caption">Добавить субтитры...</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Все медиа-файлы</string>
   <!--MessageRecord-->
